[package]
name = "web_blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_blog"
edition = "2021"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["mysql", "mysql_backend", "r2d2"] }
dotenvy = "0.15.6"
handlebars = { version = "4.3.6", features = ["dir_source"] }
serde_json = "1.0.93"

