[package]
name = "web_blog"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["mysql", "mysql_backend", "r2d2"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
handlebars = { version = "4.3.6", features = ["dir_source"] }
markdown = "1.0.0-alpha.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
url = "2.3.1"

